<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICareApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnCreateProfile">Create Profile</string>
    <string name="btnViewProfile">View Profile</string>
    <string name="title_activity_icare_create_profile">ICareCreateProfileActivity</string>
    <string name="name">Name:</string>
    <string name="enter_name">enter your name</string>
    <string name="fathers_name">Fathers Name:</string>
    <string name="enter_fathers_name">enter fathers name</string>
    <string name="mothers_name">Mothers Name:</string>
    <string name="enter_mothers_name">enter mothers name</string>
    <string name="age">Age:</string>
    <string name="enter_age">enter your age</string>
    <string name="eye_color">Eye Color:</string>
    <string name="enter_eye_color">enter your eye color</string>
    <string name="weight">Weight:</string>
    <string name="enter_weight">enter your weight</string>
    <string name="height">Height:</string>
    <string name="enter_height">enter your height</string>
    <string name="date_of_birth">Date Of Birth:</string>
    <string name="enter_date_of_birth">enter date of birth</string>
    <string name="birth_place">Birth Place:</string>
    <string name="enter_birth_place">enter your birth place</string>
    <string name="special_notes">Special Notes:</string>
    <string name="enter_special_notes">enter special notes</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_icare_profile_data_preview">ICareProfileDataPreviewActivity</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_icare_create_diet_chart">ICareCreateDietChartActivity</string>
    <string name="title_activity_icare_diet_chart_list">ICareDietChartListActivity</string>
    <string name="title_activity_icare_diet_chart_preview">ICareDietChartPreviewActivity</string>
    <string name="tv_activity_date">Date:</string>
    <string name="activity_date">enter date</string>
    <string name="tv_activity_time">Time:</string>
    <string name="activity_time">enter time</string>
    <string name="tv_activity_description">Description:</string>
    <string name="activity_description">activity description</string>
        <string name="tv_activity_name">Name:</string>
    <string name="activity_name">activity name</string>
    <string name="activity_alarm">Alarm</string>
    <string name="btnSave">Save</string>
    <string name="db_two_activity_date">Date:</string>
    <string name="db_two_activity_time">Time:</string>
    <string name="db_two_activity_description">Description:</string>
    <string name="db_two_activity_current_date">Created Date:</string>
    <string name="db_two_activity_alarm">Alarm:</string>

</resources>