<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <TextView 
        android:id="@+id/db_check_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="26sp"
        
        android:visibility="gone"/>

    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

	    <TextView
	        android:layout_width="0dp"
	    	 android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/name" />

	    <EditText
	        android:id="@+id/name"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_name" />
	 </LinearLayout>
    
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
 
	    <TextView
	        android:layout_width="0dp"
	    	android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/fathers_name" />

	    <EditText
	        android:id="@+id/fathers_name"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_fathers_name" />
	 </LinearLayout>
	 
      
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    	    
	    <TextView
	        android:layout_width="0dp"
	    	android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/mothers_name" />

	    <EditText
	        android:id="@+id/mothers_name"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_mothers_name" />
	 </LinearLayout>
	 
           
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    	    
	    <TextView
	        android:layout_width="0dp"
	    	android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/age" />

	    <EditText
	        android:id="@+id/age"
	        android:inputType="numberSigned"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_age" />
	 </LinearLayout>
    
     
                
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    	    
	    <TextView
	        android:layout_width="0dp"
	    	android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/eye_color" />

	    <EditText
	        android:id="@+id/eye_color"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_eye_color" />
	 </LinearLayout>
	 
     
                     
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    	    
	    <TextView
	        android:layout_width="0dp"
	    	android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/weight" />

	    <EditText
	        android:id="@+id/weight"
	        android:inputType="numberSigned"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_weight" />
	 </LinearLayout>
	 
                     
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    	    
	    <TextView
	        android:layout_width="0dp"
	    	android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/height" />

	    <EditText
	        android:id="@+id/height"
	        
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_height" />
	 </LinearLayout>
	 
     
                          
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    	    
	    <TextView
	        android:layout_width="0dp"
	    	android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/date_of_birth" />

	    <EditText
	        android:id="@+id/date_of_birth"
	        android:inputType="date"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_date_of_birth" />
	 </LinearLayout>
	 
                          
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    	    
	    <TextView
	        android:layout_width="0dp"
	    	android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/birth_place" />

	    <EditText
	        android:id="@+id/birth_place"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_birth_place" />
	 </LinearLayout>
	 
                               
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    	    
	    <TextView
	        android:layout_width="0dp"
	    	android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/special_notes" />

	    <EditText
	        android:id="@+id/special_notes"
	        android:inputType="text"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_special_notes" />
	 </LinearLayout>

     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnSubmit"
                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/submit"
                android:onClick="saveData"   />

            <Button
                android:id="@+id/btnCancel"
                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/cancel"
                android:onClick="cancelCreate" />
        </LinearLayout>
    </LinearLayout>
   

</LinearLayout>

 </ScrollView>  


