<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tappware.icare.ICareDailyActivityChartActivity"
    android:orientation="vertical" >
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

	    <TextView
	        android:layout_width="0dp"
	    	 android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/tv_activity_date" />

	    <EditText
	        android:id="@+id/activity_date"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/activity_date" />
	 </LinearLayout>
	 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

	    <TextView
	        android:layout_width="0dp"
	    	 android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/tv_activity_time" />

	    <EditText
	        android:id="@+id/activity_time"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/activity_time" />
	 </LinearLayout>
	 
            <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

	    <TextView
	        android:layout_width="0dp"
	    	 android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/tv_activity_name" />

	    <EditText
	        android:id="@+id/activity_name"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/activity_name" />
	 </LinearLayout>
	 	    <TextView
	        
	        android:layout_width="match_parent"
	    	 
	        android:layout_height="wrap_content"
	        android:text="Food Menu:"
	         />
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >

	    <TextView
	        android:id="@+id/text0"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="1)"
	        android:gravity="center"
	         />

	    <EditText
	        android:id="@+id/e0"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/activity_description" />
	 </LinearLayout>
	         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

	    <TextView
	        android:id="@+id/text1"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	        android:gravity="center"
	         />

	    <EditText
	        android:id="@+id/e1"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:visibility="gone"
	        android:hint="@string/activity_description" />
	 </LinearLayout>
	         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        
        >

	    <TextView
	        android:id="@+id/text2"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	       android:gravity="center"
	        android:visibility="gone" />

	    <EditText
	        android:id="@+id/e2"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:visibility="gone"
	        android:hint="@string/activity_description" />
	 </LinearLayout>
	         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >

	    <TextView
	        android:id="@+id/text3"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	        android:gravity="center"
	        />

	    <EditText
	        android:id="@+id/e3"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:visibility="gone"
	        android:hint="@string/activity_description" />
	 </LinearLayout>
	         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >

	    <TextView
	        android:id="@+id/text4"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.35"
	    	 android:gravity="center"
	        android:layout_height="wrap_content"
	        android:visibility="gone"/>

	    <EditText
	        android:id="@+id/e4"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:visibility="gone"
	        android:hint="@string/activity_description" />
	 </LinearLayout>
	         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

	    <TextView
	        android:id="@+id/text5"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.35"
	    	 android:gravity="center"
	        android:layout_height="wrap_content"
	       android:visibility="gone"/>

	    <EditText
	        android:id="@+id/e5"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:visibility="gone"
	        android:hint="@string/activity_description" />
	 </LinearLayout>
	         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >

	    <TextView
	        android:id="@+id/text6"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	       android:visibility="gone"/>

	    <EditText
	        android:id="@+id/e6"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/activity_description"
	        android:visibility="gone" />
	 </LinearLayout>
	         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >

	    <TextView
	        android:id="@+id/text7"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.35"
	    	 android:gravity="center"
	        android:layout_height="wrap_content"
	        android:visibility="gone" />

	    <EditText
	        android:id="@+id/e7"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:visibility="gone"
	        android:hint="@string/activity_description" />
	 </LinearLayout>
	         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >

	    <TextView
	        android:id="@+id/text8"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.35"
	    	 android:gravity="center"
	        android:layout_height="wrap_content"
	       android:visibility="gone" />

	    <EditText
	        android:id="@+id/e8"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:visibility="gone"
	        android:hint="@string/activity_description" />
	 </LinearLayout>
	         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >

	    <TextView
	        android:id="@+id/text9"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.35"
	    	 android:gravity="center"
	        android:layout_height="wrap_content"
	        android:visibility="gone" />

	    <EditText
	        android:id="@+id/e9"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:visibility="gone"
	        android:hint="@string/activity_description" />
	 </LinearLayout>
	         
	 


        <CheckBox
            android:id="@+id/activity_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_alarm" />
        
                <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
         
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnMinus"
                style="@color/abc_primary_text_material_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="-"
                   />

            <Button
                android:id="@+id/btnPlus"
                 style="@color/abc_primary_text_material_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="+"
                 />
        </LinearLayout>
        
         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnSave"
                style="@color/abc_primary_text_material_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/btnSave"
                   />

            <Button
                android:id="@+id/btnCancel_two"
                 style="@color/abc_primary_text_material_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/cancel"
                />
        </LinearLayout>
    </LinearLayout>
   

</LinearLayout>
